[FIX] web_responsive: Update z-index in apps menu.scss to fix overlapping issue:
- Increase z-index from 1000 to 10000 in apps_menu.scss.

--- a/web_responsive/static/src/components/apps_menu/apps_menu.scss
+++ b/web_responsive/static/src/components/apps_menu/apps_menu.scss
@@ -10,7 +10,7 @@
     position: fixed;
     margin: 0;
     width: 100vw;
-    z-index: 1000;
+    z-index: 10000;
     left: 0 !important;
 }
 
